Solved some spacing issues
Moved the bottom padding to a better place. Also increased the width to avoid Problematicus' problems. (pun intended)

--- a/Garland.Web/ffxivfisher/fisher.css
+++ b/Garland.Web/ffxivfisher/fisher.css
@@ -1,6 +1,6 @@
 .ff-fisher-root {
     margin: auto;
-    width: 900px;
+    width: 940px;
 }
 
 .ff-fisher-header {
@@ -44,7 +44,7 @@
 }
 
 .ff-fisher-all-fish,.ff-fisher-areas {
-    margin-bottom: 40px;
+    margin-bottom: 100px;
 }
 
 .ff-fisher-areas-container {
@@ -447,7 +447,7 @@ body {
     font-family: Open Sans;
     font-size: 16px;
     margin: 0;
-    padding: 0 0 60px 0;
+    padding: 0;
 }
 
 .ff-table {
